main cmt